@@ -4,6 +4,8 @@
 * WordPress 5.7 compatible.
 * Removed unnecessary magic method overrides in Groups_Options (also eliminates PHP 8 warning for __wakeup()).
 * Added missing scope declarations to Groups_Pagination methods.
+* Fixed potential issues when creating a group programmatically indicating the group's parent ID.
+* Minor code formatting clean-up.
 
 = 2.12.0 =
 * WordPress 5.6 compatible.
